force-app/main/default/objects/Account/fields/Above_or_Below_Pace__c.field-meta.xml
<CustomField>
    <fullName>Above_or_Below_Pace__c</fullName>
    <formula>IF(Percent_of_Contract_Complete__c &gt; Percent_to_Annual_Appt_Goal__c, &quot;Below&quot;,
  IF(Percent_of_Contract_Complete__c &lt;= Percent_to_Annual_Appt_Goal__c, &quot;Above&quot;, &quot;&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Shows whether we are on pace or behind for client appointments</inlineHelpText>
    <label>Above or Below Pace</label>
    <type>Text</type>
</CustomField>