force-app/main/default/objects/Account/fields/Above_or_Below_Pace_Num__c.field-meta.xml
<CustomField>
    <fullName>Above_or_Below_Pace_Num__c</fullName>
    <formula>IF(Above_or_Below_Pace__c = &quot;Above&quot;, 1, 0)</formula>
    <label>Above or Below Pace ()</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>