force-app/main/default/objects/Account/fields/Abstrakt_Internal_Process__c.field-meta.xml
<CustomField>
    <fullName>Abstrakt_Internal_Process__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Abstrakt Internal Process</label>
    <type>Checkbox</type>
</CustomField>