force-app/main/default/objects/Account/fields/Account_Management_Billing_Notes__c.field-meta.xml
<CustomField>
    <fullName>Account_Management_Billing_Notes__c</fullName>
    <label>Account Management Billing Notes</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>