force-app/main/default/objects/Account/fields/Account_Management_Notes__c.field-meta.xml
<CustomField>
    <fullName>Account_Management_Notes__c</fullName>
    <description>Notes for the Account Manager</description>
    <label>Account Management Notes</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>