force-app/main/default/objects/Account/fields/Account_Name_to_be_Used_in_Appt_Emails__c.field-meta.xml
<CustomField>
    <fullName>Account_Name_to_be_Used_in_Appt_Emails__c</fullName>
    <label>Account Name to be Used in Appt Emails</label>
    <length>50</length>
    <type>Text</type>
</CustomField>