force-app/main/default/objects/Account/fields/Account_Past_First_Year__c.field-meta.xml
<CustomField>
    <fullName>Account_Past_First_Year__c</fullName>
    <formula>AND(
NOT(
ISPICKVAL( Status__c , &apos;Canceled&apos;)),
 Number_of_Days_Live__c &gt; 365)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Past First Year</label>
    <type>Checkbox</type>
</CustomField>