force-app/main/default/objects/Account/fields/Accounting_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Contact_Phone__c</fullName>
    <description>Phone Number for our Accounting number at each account</description>
    <inlineHelpText>Phone Number for our Accounting number at each account</inlineHelpText>
    <label>Accounting Contact Phone</label>
    <type>Phone</type>
</CustomField>