force-app/main/default/objects/Account/fields/Actual_Calls_This_Month__c.field-meta.xml
<CustomField>
    <fullName>Actual_Calls_This_Month__c</fullName>
    <description>This field is updated by the nightly Account Metrics Batch process with a count of tasks this month where the CallDurationInSeconds is greater than 0</description>
    <inlineHelpText>This field is updated by the nightly Account Metrics Batch process with a count of tasks this month where the CallDurationInSeconds is greater than 0</inlineHelpText>
    <label>Actual Calls This Month</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>