force-app/main/default/objects/Account/fields/Actual_Content_Uploads_This_Year__c.field-meta.xml
<CustomField>
    <fullName>Actual_Content_Uploads_This_Year__c</fullName>
    <description>An aggregate of Creative Content where the publish date is this year,</description>
    <label>Actual Content Uploads This Year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>