force-app/main/default/objects/Account/fields/Actual_Word_Count_This_Month__c.field-meta.xml
<CustomField>
    <fullName>Actual_Word_Count_This_Month__c</fullName>
    <description>An aggregate of Actual Word Count This Month from Creative Content Word Count where the published date is this month.</description>
    <label>Actual Word Count This Month</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>