force-app/main/default/objects/Account/fields/Ad_Spend_Amount__c.field-meta.xml
<CustomField>
    <fullName>Ad_Spend_Amount__c</fullName>
    <label>Social Media Ad Spend Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>