force-app/main/default/objects/Account/fields/Additional_Guarantees__c.field-meta.xml
<CustomField>
    <fullName>Additional_Guarantees__c</fullName>
    <label>Additional Guarantees</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LinkedIn</fullName>
            </value>
            <value>
                <fullName>Companies Cleansed</fullName>
            </value>
            <value>
                <fullName>Surveys Collected</fullName>
            </value>
            <value>
                <fullName>3-month live 15% - Cancel</fullName>
            </value>
            <value>
                <fullName>3-month live 15% - Money Back</fullName>
            </value>
            <value>
                <fullName>3 Months Live 8 Appts</fullName>
            </value>
            <value>
                <fullName>6-month live 30% - Cancel</fullName>
            </value>
            <value>
                <fullName>Annual Guarantee - Only 14th month free</fullName>
            </value>
            <value>
                <fullName>Annual Guarantee - Free until guarantee met</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Bionic+</fullName>
            </value>
            <value>
                <fullName>Cold Call Save Play</fullName>
            </value>
            <value>
                <fullName>3-month live 15% - Cancel &amp; Money Back</fullName>
                <isActive>false</isActive>
                <label>3-month live 15% - Cancel &amp; Money Back</label>
            </value>
            <value>
                <fullName>45-day Out</fullName>
                <isActive>false</isActive>
                <label>45-day Out</label>
            </value>
            <value>
                <fullName>Annual Lock-In</fullName>
                <isActive>false</isActive>
                <label>Annual Lock-In</label>
            </value>
            <value>
                <fullName>Annual Lock-In w/ 6-month live no guarantee 45-day out</fullName>
                <isActive>false</isActive>
                <label>Annual Lock-In w/ 6-month live no guarantee 45-day out</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>