force-app/main/default/objects/Account/fields/Adjusted_Monthly_Appt_Goal__c.field-meta.xml
<CustomField>
    <fullName>Adjusted_Monthly_Appt_Goal__c</fullName>
    <description>This number identifies that number of appointments that we need per month to hit the annual goal.  It will account for months that we came up short.</description>
    <formula>CEILING( ABS(of_Appts_Needed_by_End_of_Contract__c / Number_of_Months_Left_in_Contract__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This number identifies that number of appointments that we need per month to hit the annual goal.  It will account for months that we came up short.</inlineHelpText>
    <label>Adjusted Monthly Appt Goal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>