force-app/main/default/objects/Account/fields/Adjusted_Monthly_Records_Moved_Goal__c.field-meta.xml
<CustomField>
    <fullName>Adjusted_Monthly_Records_Moved_Goal__c</fullName>
    <formula>CEILING( (Yearly_Targets_Moved_Goal__c - Targets_Moved_This_Year__c) / Number_of_Calendar_Days_Left_in_Contract__c /30.5)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adjusted Monthly Records Moved Goal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>