force-app/main/default/objects/Account/fields/Agency_Satisfaction_Level__c.field-meta.xml
<CustomField>
    <fullName>Agency_Satisfaction_Level__c</fullName>
    <label>Agency Satisfaction Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Satisfied</fullName>
            </value>
            <value>
                <fullName>Somewhat Satisfied</fullName>
            </value>
            <value>
                <fullName>Not Satisfied</fullName>
            </value>
            <value>
                <fullName>Not an Agency Client</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>