force-app/main/default/objects/Account/fields/Agency_Services__c.field-meta.xml
<CustomField>
    <fullName>Agency_Services__c</fullName>
    <description>This is for Agency clients only.</description>
    <label>Agency Services</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Assets/Collateral</fullName>
            </value>
            <value>
                <fullName>Automotive Social Media</fullName>
            </value>
            <value>
                <fullName>Bionic SDR</fullName>
            </value>
            <value>
                <fullName>Custom Creative</fullName>
            </value>
            <value>
                <fullName>Digital Strategy Consulting</fullName>
            </value>
            <value>
                <fullName>Email Campaign (Pay Per Meeting)</fullName>
            </value>
            <value>
                <fullName>Email Marketing</fullName>
            </value>
            <value>
                <fullName>LinkedinBooster</fullName>
            </value>
            <value>
                <fullName>Local SEO</fullName>
            </value>
            <value>
                <fullName>Marketing Collateral</fullName>
            </value>
            <value>
                <fullName>Media Buys</fullName>
            </value>
            <value>
                <fullName>Ongoing Content</fullName>
            </value>
            <value>
                <fullName>Ongoing SEO</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Pipeline SEO: Social Content</fullName>
            </value>
            <value>
                <fullName>PPC/SEM</fullName>
            </value>
            <value>
                <fullName>Projects</fullName>
            </value>
            <value>
                <fullName>ProServe</fullName>
            </value>
            <value>
                <fullName>SEO/Website</fullName>
                <label>SEO</label>
            </value>
            <value>
                <fullName>Social Boost - Facebook</fullName>
            </value>
            <value>
                <fullName>Social Boost - LinkedIn</fullName>
            </value>
            <value>
                <fullName>Social Content Only</fullName>
            </value>
            <value>
                <fullName>Video</fullName>
            </value>
            <value>
                <fullName>Web Hosting Only</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>WebsiteBuild</fullName>
                <label>Website Build</label>
            </value>
            <value>
                <fullName>Email Campaign</fullName>
                <label>Email Campaign (Flat Rate)</label>
            </value>
            <value>
                <fullName>20 Hr Creative Pkg</fullName>
                <isActive>false</isActive>
                <label>20 Hr Creative Pkg</label>
            </value>
            <value>
                <fullName>Agency Services</fullName>
                <isActive>false</isActive>
                <label>Agency Services</label>
            </value>
            <value>
                <fullName>Automotive Agency Service</fullName>
                <isActive>false</isActive>
                <label>Automotive Agency Service</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>