force-app/main/default/objects/Account/fields/Allocation_Formula__c.field-meta.xml
<CustomField>
    <fullName>Allocation_Formula__c</fullName>
    <formula>Hours_Allocated_to_Primary_BGMs__c &lt; Expected_Hours_per_Day__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Allocation Formula</label>
    <type>Checkbox</type>
</CustomField>