force-app/main/default/objects/Account/fields/Annual_Content_Upload_Goal__c.field-meta.xml
<CustomField>
    <fullName>Annual_Content_Upload_Goal__c</fullName>
    <label>Annual Content Upload Goal</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>