force-app/main/default/objects/Account/fields/Annual_Sales_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Annual_Sales_Revenue__c</fullName>
    <label>Annual Sales Revenue</label>
    <length>25</length>
    <type>Text</type>
</CustomField>