force-app/main/default/objects/Account/fields/Annual_Word_Count_Goal__c.field-meta.xml
<CustomField>
    <fullName>Annual_Word_Count_Goal__c</fullName>
    <label>Annual Word Count Goal</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>