force-app/main/default/objects/Account/fields/Appointment_Consulting_Goal__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Consulting_Goal__c</fullName>
    <description>Number of Appointment Consulting emails needed to send to client each month</description>
    <formula>Program_Size__c * 2</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Appointment Consulting Goal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>