force-app/main/default/objects/Account/fields/Appointment_Guarantee__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Guarantee__c</fullName>
    <label>Appointment Guarantee</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Annual</fullName>
            </value>
            <value>
                <fullName>Appts or Dials</fullName>
            </value>
            <value>
                <fullName>Dials Only</fullName>
            </value>
            <value>
                <fullName>Appts and Dials</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Incentive Based Program</fullName>
            </value>
            <value>
                <fullName>No Guarantee</fullName>
            </value>
            <value>
                <fullName>1 Month Free</fullName>
            </value>
            <value>
                <fullName>Free Until Hit</fullName>
                <label>Work For Free Until Hit</label>
            </value>
            <value>
                <fullName>Refund</fullName>
            </value>
            <value>
                <fullName>6 Months Free</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>