force-app/main/default/objects/Account/fields/Appt_Consultings_This_Month__c.field-meta.xml
<CustomField>
    <fullName>Appt_Consultings_This_Month__c</fullName>
    <description>Number of appointment consulting created this month</description>
    <label>Appt Consultings This Month</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>