force-app/main/default/objects/Account/fields/Appt_Deficit__c.field-meta.xml
<CustomField>
    <fullName>Appt_Deficit__c</fullName>
    <formula>IF(((Percent_of_Contract_Complete__c * Yearly_Appt_Goal__c) - (Percent_to_Annual_Appt_Goal__c * Yearly_Appt_Goal__c)) &gt; 0,
    (CEILING(Percent_of_Contract_Complete__c * Yearly_Appt_Goal__c) - (Percent_to_Annual_Appt_Goal__c * Yearly_Appt_Goal__c)), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText># of Appointments need by end of contract</inlineHelpText>
    <label>Appt Deficit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>