force-app/main/default/objects/Account/fields/Appt_Goal_Over_50__c.field-meta.xml
<CustomField>
    <fullName>Appt_Goal_Over_50__c</fullName>
    <description>Checks the box when percent to monthly appointment goal is greater than 50%</description>
    <formula>IF( to_Appt_Goal_Actual__c &gt;=(50/100),TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Appt Goal 50% and Over</label>
    <type>Checkbox</type>
</CustomField>