force-app/main/default/objects/Account/fields/Appts_Needed_Per_Month__c.field-meta.xml
<CustomField>
    <fullName>Appts_Needed_Per_Month__c</fullName>
    <formula>CEILING(of_Appts_Needed_by_End_of_Contract__c/( Number_of_Calendar_Days_Left_in_Contract__c /30))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Appts Needed Per Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>