force-app/main/default/objects/Account/fields/Appts_On_Pace_for_the_Month__c.field-meta.xml
<CustomField>
    <fullName>Appts_On_Pace_for_the_Month__c</fullName>
    <description>Track if appointments are on pace with the percentage of the current month complete.</description>
    <formula>IF( OR(Override_Pacing_Metrics__c = True,to_Appt_Goal_Actual__c  &gt;=  Percent_of_Month_Complete__c) ,True,False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Appts On Pace for the Month</label>
    <type>Checkbox</type>
</CustomField>