force-app/main/default/objects/Account/fields/Appts_This_Month__c.field-meta.xml
<CustomField>
    <fullName>Appts_This_Month__c</fullName>
    <description>This field is populated by a nightly batch process and represents the total number of contacts associated with this account which have an appointment Dev Outcome and an Appt Date this month</description>
    <inlineHelpText>This field is populated by a nightly batch process and represents the total number of contacts associated with this account which have an appointment Dev Outcome and an Appt Date this month</inlineHelpText>
    <label>Appts This Month</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>