force-app/main/default/objects/Account/fields/Appts_This_Month_No_Overage__c.field-meta.xml
<CustomField>
    <fullName>Appts_This_Month_No_Overage__c</fullName>
    <formula>IF(Appts_This_Month__c &gt;  Monthly_Appt_Goal__c   ,  Monthly_Appt_Goal__c  , Appts_This_Month__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Appts This Month - No Overage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>