force-app/main/default/objects/Account/fields/Appts_This_Year__c.field-meta.xml
<CustomField>
    <fullName>Appts_This_Year__c</fullName>
    <description>This field is populated by a nightly batch process and represents the total number of contacts associated with this account which have an appointment Dev Outcome and an Appt Date this year (based on the Current Contract Calling Start Date)</description>
    <inlineHelpText>This field is populated by a nightly batch process and represents the total number of contacts associated with this account which have an appointment Dev Outcome and an Appt Date this year (based on the Current Contract Calling Start Date)</inlineHelpText>
    <label>Appts This Contract</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>