force-app/main/default/objects/Account/fields/Appts_to_Date__c.field-meta.xml
<CustomField>
    <fullName>Appts_to_Date__c</fullName>
    <description>This field is populated by a nightly batch process and represents the total number of contacts associated with this account which have an appointment DevOutcome</description>
    <inlineHelpText>This field is populated by a nightly batch process and represents the total number of contacts associated with this account which have an appointment DevOutcome</inlineHelpText>
    <label>Lifetime Appts to Date</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>