force-app/main/default/objects/Account/fields/Appts_Today__c.field-meta.xml
<CustomField>
    <fullName>Appts_Today__c</fullName>
    <description>Populated by Account Metrics batch process</description>
    <inlineHelpText>Populated by Account Metrics batch process</inlineHelpText>
    <label>Appts Today</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>