force-app/main/default/objects/Account/fields/Artist__c.field-meta.xml
<CustomField>
    <fullName>Artist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Artist</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accountsrhg5</relationshipName>
    <type>Lookup</type>
</CustomField>