force-app/main/default/objects/Account/fields/Asset_Cancellation_Date__c.field-meta.xml
<CustomField>
    <fullName>Asset_Cancellation_Date__c</fullName>
    <description>Used to Identify the Cancellation Date of Ongoing Asset Services</description>
    <label>Marketing Collateral Cancellation Date</label>
    <type>Date</type>
</CustomField>