force-app/main/default/objects/Account/fields/Assistant_Partner_Sales_Manager__c.field-meta.xml
<CustomField>
    <fullName>Assistant_Partner_Sales_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>AMG: Pipeline Performance Manager ; Sapper: Partner Performance Manager</description>
    <inlineHelpText>AMG: Pipeline Performance Manager ; Sapper: Partner Performance Manager</inlineHelpText>
    <label>Partner Performance Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts8</relationshipName>
    <type>Lookup</type>
</CustomField>