force-app/main/default/objects/Account/fields/Associated_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Associated_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Link to the opportunity the sales rep closed</inlineHelpText>
    <label>Associated Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>