force-app/main/default/objects/Account/fields/Associated_Opportunity_URL__c.field-meta.xml
<CustomField>
    <fullName>Associated_Opportunity_URL__c</fullName>
    <formula>&quot;amg.my.salesforce.com/lightning/r/Opportunity/&quot;+Associated_Opportunity__r.Id+&quot;/view&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Associated Opportunity URL</label>
    <type>Text</type>
</CustomField>