force-app/main/default/objects/Account/fields/Auto_Approval_Not_Applicable__c.field-meta.xml
<CustomField>
    <fullName>Auto_Approval_Not_Applicable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto-Approval Not Applicable</label>
    <type>Checkbox</type>
</CustomField>