force-app/main/default/objects/Account/fields/Auto_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Auto_Renewal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If the client has an auto renew in their agreement</description>
    <label>Auto Renewal</label>
    <type>Checkbox</type>
</CustomField>