force-app/main/default/objects/Account/fields/Automate_Opportunity_Creation__c.field-meta.xml
<CustomField>
    <fullName>Automate_Opportunity_Creation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opt Out of Inbound Lead Calling</label>
    <type>Checkbox</type>
</CustomField>