force-app/main/default/objects/Account/fields/Batch_Pipeline_Account_Metrics__c.field-meta.xml
<CustomField>
    <fullName>Batch_Pipeline_Account_Metrics__c</fullName>
    <formula>RecordType.Name = &apos;Pipeline Client&apos;
          &amp;&amp; TEXT(Status__c) = &apos;Active&apos; &amp;&amp; NOT(ISNULL(Go_Live_Date__c)) &amp;&amp; Name != &apos;Abstrakt Marketing Group&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Temp field created by Jessica to demonstrate which accounts are populated by Batch Account Metrics vs Batch Pipeline Account Metrics</inlineHelpText>
    <label>Batch Pipeline Account Metrics</label>
    <type>Checkbox</type>
</CustomField>