force-app/main/default/objects/Account/fields/BCC_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>BCC_Email_Address__c</fullName>
    <description>This is the email address which will be BCC&apos;d on all outgoing emails from this client using campaigns</description>
    <inlineHelpText>This is the email address which will be BCC&apos;d on all outgoing emails from this client using campaigns</inlineHelpText>
    <label>BCC Email Address</label>
    <type>Email</type>
</CustomField>