force-app/main/default/objects/Account/fields/Behind_Pace_Calls_Hours_Targets__c.field-meta.xml
<CustomField>
    <fullName>Behind_Pace_Calls_Hours_Targets__c</fullName>
    <description>This specifically shows whether or not the hours, targets, and calls are on pace or behind pace for reporting.</description>
    <formula>IF(OR(
Percent_of_Logged_Hours_Goal_Complete__c &lt;   (1-Number_of_Calling_Days_Left_This_Month__c/ Number_of_Days_Total_This_Month__c)  , 
Percent_of_Monthly_Call_Goal_Complete__c &lt;  (1-Number_of_Calling_Days_Left_This_Month__c/ Number_of_Days_Total_This_Month__c)),   
&quot;Behind Pace&quot;, &quot;On Pace&quot;)</formula>
    <inlineHelpText>This specifically shows whether or not the hours, targets, and calls are on pace or behind pace for reporting.</inlineHelpText>
    <label>Behind Pace (Calls, Hours, Targets)</label>
    <type>Text</type>
</CustomField>