force-app/main/default/objects/Account/fields/Behind_Pace_for_Calls_This_Month__c.field-meta.xml
<CustomField>
    <fullName>Behind_Pace_for_Calls_This_Month__c</fullName>
    <formula>IF(  Dial_to_Goal__c &lt; Percent_of_Month_Complete__c ,TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Behind Pace for Calls This Month</label>
    <type>Checkbox</type>
</CustomField>