force-app/main/default/objects/Account/fields/BGM_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>BGM_Email_Address__c</fullName>
    <description>This is to be used for the email address setup for us by the client.</description>
    <inlineHelpText>This is to be used for the email address setup for us by the client.</inlineHelpText>
    <label>Delivery Owner&apos;s Account&apos;s Email Address</label>
    <type>Email</type>
</CustomField>