force-app/main/default/objects/Account/fields/Billing_Account__c.field-meta.xml
<CustomField>
    <fullName>Billing_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if this account receives invoices.  If there is a parent account, the parent will always be the one that  gets checked.</inlineHelpText>
    <label>Billing Account</label>
    <type>Checkbox</type>
</CustomField>