force-app/main/default/objects/Account/fields/Billing_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact_Name__c</fullName>
    <label>Billing Contact Name</label>
    <type>TextArea</type>
</CustomField>