force-app/main/default/objects/Account/fields/Billing_Contact_Notes__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact_Notes__c</fullName>
    <label>Billing Contact Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>