force-app/main/default/objects/Account/fields/Calendly_API_Key__c.field-meta.xml
<CustomField>
    <fullName>Calendly_API_Key__c</fullName>
    <description>Used for Workato/Calendly recipe: Calendly New Event and Calendly Canceled Event.</description>
    <label>Calendly API Key</label>
    <length>100</length>
    <type>Text</type>
</CustomField>