force-app/main/default/objects/Account/fields/Call_Guide_Link__c.field-meta.xml
<CustomField>
    <fullName>Call_Guide_Link__c</fullName>
    <label>Call Guide Link</label>
    <type>Url</type>
</CustomField>