force-app/main/default/objects/Account/fields/Call_Guide_URL__c.field-meta.xml
<CustomField>
    <fullName>Call_Guide_URL__c</fullName>
    <label>Call Guide URL</label>
    <type>Url</type>
</CustomField>