force-app/main/default/objects/Account/fields/Calls_On_Pace_for_the_Month__c.field-meta.xml
<CustomField>
    <fullName>Calls_On_Pace_for_the_Month__c</fullName>
    <description>Checks whether dials are on pace with percentage of the month complete.</description>
    <formula>IF(  OR(Dial_to_Goal__c  &gt;= Percent_of_Month_Complete__c,  Override_Pacing_Metrics__c = True) ,True,False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calls On Pace for the Month</label>
    <type>Checkbox</type>
</CustomField>