force-app/main/default/objects/Account/fields/Calls_This_Month_No_Overage__c.field-meta.xml
<CustomField>
    <fullName>Calls_This_Month_No_Overage__c</fullName>
    <formula>IF(Actual_Calls_This_Month__c&gt; Monthly_Call_Goal__c, Monthly_Call_Goal__c, Actual_Calls_This_Month__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calls This Month - No Overage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>