force-app/main/default/objects/Account/fields/Cancel_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cancel_Reason__c</fullName>
    <inlineHelpText>If the client gave us cancellation notice, please enter the reason.</inlineHelpText>
    <label>Cancel Reason</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>