force-app/main/default/objects/Account/fields/Cancel_Risk_Responded__c.field-meta.xml
<CustomField>
    <fullName>Cancel_Risk_Responded__c</fullName>
    <description>Cancel Risk Responded</description>
    <inlineHelpText>Please fill in the date the client responded</inlineHelpText>
    <label>Cancel Risk Responded</label>
    <type>Date</type>
</CustomField>