force-app/main/default/objects/Account/fields/Canceled__c.field-meta.xml
<CustomField>
    <fullName>Canceled__c</fullName>
    <formula>ISPICKVAL(Status__c, &apos;Canceled&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Canceled</label>
    <type>Checkbox</type>
</CustomField>