force-app/main/default/objects/Account/fields/Canceled_Marketing_Collateral__c.field-meta.xml
<CustomField>
    <fullName>Canceled_Marketing_Collateral__c</fullName>
    <formula>IF(AND( NOT(  ISBLANK(Asset_Cancellation_Date__c)),Asset_Cancellation_Date__c &lt; TODAY()),TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Canceled Marketing Collateral</label>
    <type>Checkbox</type>
</CustomField>