force-app/main/default/objects/Account/fields/Chance_of_Cancel__c.field-meta.xml
<CustomField>
    <fullName>Chance_of_Cancel__c</fullName>
    <description>Inverse of the Total CFS Score</description>
    <inlineHelpText>Inverse of the Total CFS Score</inlineHelpText>
    <label>Chance of Cancel</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>